--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
         pinkMaterial.emissiveColor = new BABYLON.Color3(1, .3, .6); // Define the color of the material as if self lit
         sphere2.material = pinkMaterial;
 
+        var brickMaterial = new BABYLON.StandardMaterial(
+            "brickMaterial",    // Name of the material
+            scene               // The scene the material belongs to
+        );
+        brickMaterial.diffuseTexture = new BABYLON.Texture("img/pexels-photo-761142.jpeg", scene); // The basic texture of the material
+        brickMaterial.specularTexture = new BABYLON.Texture("img/pexels-photo-761142.jpeg", scene); // The texture of the highlight
+        sphere1.material = brickMaterial;
+
         return scene;
     };
     /******* End of the create scene function ******/
