--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         // 1. Create the scene space
         var scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(.8,.9,1);
 
         // 2. Add a camera to the scene and attach it to the canvas
         var camera = new BABYLON.ArcRotateCamera(
