--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             touch-action: none;
         }
     </style>
-
+    <script src="js/cannon.js"></script> <!--https://cdn.babylonjs.com/cannon.js-->
     <script src="js/babylon.js"></script> <!--https://cdn.babylonjs.com/babylon.js-->
     <script src="js/babylonjs.loaders.min.js"></script> <!--https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js-->
     <script src="js/pep.js"></script> <!--https://code.jquery.com/pep/0.4.3/pep.js-->
@@ -37,20 +37,29 @@
     /******* Add the create scene function ******/
     var createScene = function () {
 
+
+
+
         // 1. Create the scene space
         var scene = new BABYLON.Scene(engine);
         scene.clearColor = new BABYLON.Color3(.8,.9,1);
+
+
+
 
         // 2. Add a camera to the scene and attach it to the canvas
         var camera = new BABYLON.ArcRotateCamera(
             "Camera",               // Name of the camera
             Math.PI / 2,            //
-            Math.PI / 3,            // Camera inclination
+            Math.PI / 2.2,            // Camera inclination
             10,                     // Distance from the target
             BABYLON.Vector3.Zero(), // The target of the camera. (0,0,0) or .Zero() points to the center of the scene (x,y,z)
             scene                   // The scene the camera belongs to
         );
         camera.attachControl(canvas, true);
+
+
+
 
         // 3. Add lights to the scene
         var light1 = new BABYLON.HemisphericLight(
@@ -63,6 +72,9 @@
             new BABYLON.Vector3(0, 1, -1),  // Position of the light in the scene (x,y,z)
             scene                           // The scene the light belongs to
         );
+
+
+
 
         // 4. This is where you create and manipulate meshes
         var sphere1 = BABYLON.MeshBuilder.CreateSphere(
@@ -85,6 +97,9 @@
             scene           // The scene the mesh belongs to
         );
         sphere3.position = new BABYLON.Vector3(3,1.5,0); // (x,y,z)
+
+
+
 
         // 5. Add materials and textures
         var pinkMaterial = new BABYLON.StandardMaterial(
@@ -111,6 +126,9 @@
         blueMaterial.diffuseColor = new BABYLON.Color3(0, 0, 1); // The basic color of the material. RGB (0 to 1)
         sphere3.material = blueMaterial;
 
+
+
+
         // 6. Adding the ground and sky
         var ground = BABYLON.MeshBuilder.CreateGround(
             "ground",                   // Name of the ground
@@ -128,6 +146,45 @@
         grassMaterial.diffuseTexture.uScale = 4; // Repetitions in the x-axis
         grassMaterial.diffuseTexture.vScale = 4; // Repetitions in the z-axis
         ground.material = grassMaterial;
+
+
+
+
+
+        // Gravity
+        var physicsPlugin = new BABYLON.CannonJSPlugin();
+        var gravityVector = new BABYLON.Vector3(0, -9.81, 0); // 9.81 m/s^2 pointing downwards
+
+        scene.enablePhysics(gravityVector, physicsPlugin);
+
+        sphere2.physicsImpostor = new BABYLON.PhysicsImpostor(
+            sphere2,                                // The object to be applied
+            BABYLON.PhysicsImpostor.SphereImpostor, // Type of impostor
+            {mass: 1, restitution: 0.8 },           // Restitution controls how bouncy the object is
+            scene                                   // The scene the material belongs to
+        );
+
+        sphere1.physicsImpostor = new BABYLON.PhysicsImpostor(
+            sphere1,                                // The object to be applied
+            BABYLON.PhysicsImpostor.SphereImpostor, // Type of impostor
+            {mass: 1, restitution: 0.8 },           // Restitution controls how bouncy the object is
+            scene                                   // The scene the material belongs to
+        );
+
+        ground.physicsImpostor = new BABYLON.PhysicsImpostor(
+            ground,                                 // The object to be applied
+            BABYLON.PhysicsImpostor.BoxImpostor,    // Type of impostor
+            { mass: 0, restitution: 0.9 },          // Restitution controls how bouncy the object is
+            scene                                   // The scene the material belongs to
+        );
+
+        sphere2.physicsImpostor.applyImpulse(
+            new BABYLON.Vector3(1,2,0),     // Controls the strength and direction of the impulse (x,y,z)
+            sphere2.getAbsolutePosition()
+        );
+
+
+
 
         // 7. Animation
         scene.registerAfterRender(function () {
